--- a/src/Style.css
+++ b/src/Style.css
@@ -443,6 +443,7 @@ a.skip-main:active,
     /* writing-mode: horizontal-tb;*/
     /* writing-mode: vertical-lr;  */
 }
+.page-divider__title{font-weight:800;}
 
 .page-divider__media {
     max-inline-size: 60px;
@@ -480,6 +481,10 @@ a.skip-main:active,
         grid-template-columns: 3fr 1fr;
         gap: 15px;
     }
+}
+
+.two-column__rail{
+    padding: 0 10px;
 }
 
 /* Accordion */
