- form style changes - contact form btn class addition

--- a/src/Style.css
+++ b/src/Style.css
@@ -513,6 +513,7 @@ a.skip-main:active,
   text-align: left;
   letter-spacing: 1px;
   transition: 0.1s ease-in;
+  color:#fff;
 }
 
 .accordion-header__trigger:hover,
@@ -618,7 +619,12 @@ a.skip-main:active,
   background: #fff;
   color: #000;
   padding: 10px;
+  border:2px solid #000;
+  border-radius:5px;
 }
+.form__item-input::placeholder {
+    font-size:1rem;
+  }
 textarea {
   min-height: 100px;
 }
