-fix to input text size

--- a/src/Style.css
+++ b/src/Style.css
@@ -621,6 +621,7 @@ a.skip-main:active,
   padding: 10px;
   border:2px solid #000;
   border-radius:5px;
+  font-size:1rem;
 }
 .form__item-input::placeholder {
     font-size:1rem;
